WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155716
[WinCairo][MediaFoundation] Crash when media player is destroyed.
https://bugs.webkit.org/show_bug.cgi?id=155716
Summary
[WinCairo][MediaFoundation] Crash when media player is destroyed.
peavo
Reported
2016-03-21 07:06:23 PDT
Sometimes I get a crash in the MediaPlayerPrivateMediaFoundation destructor when trying to release the custom video presenter member, which already has been released. This is because we have forgotten to call AddRef in the ActivateObject method. According to the documentation in
https://msdn.microsoft.com/en-us/library/windows/desktop/ms694292(v=vs.85).aspx
, the caller is responsible for releasing the returned object, which means we have to call AddRef.
Attachments
Patch
(1.46 KB, patch)
2016-03-21 07:14 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2016-03-21 07:14:37 PDT
Created
attachment 274590
[details]
Patch
WebKit Commit Bot
Comment 2
2016-03-21 10:54:21 PDT
Comment on
attachment 274590
[details]
Patch Clearing flags on attachment: 274590 Committed
r198493
: <
http://trac.webkit.org/changeset/198493
>
WebKit Commit Bot
Comment 3
2016-03-21 10:54:25 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 4
2016-03-21 11:03:13 PDT
Thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug