[WinCairo][MediaFoundation] Crash when media player is destroyed. https://bugs.webkit.org/show_bug.cgi?id=155716

Reviewed by Alex Christensen.

Increase the reference count on the video presenter object in the ActivateObject method
to avoid referencing a deleted object when the media player is destroyed.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::ActivateObject):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@198493 268f45cc-cd09-0410-ab3c-d52691b4dbfc